Update Quickstart Guide, fix some typos
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -28,7 +28,7 @@
   \end{figure}
   \vspace{1cm}
 %  \textbf{RELEASE CANDIDATE}\\[\medskipamount]
-  Version 1.0 for Equalizer 0.4\\[\medskipamount]
+  Version 1.0.1 for Equalizer 0.4\\[\medskipamount]
   \today
 }
 
@@ -114,6 +114,7 @@ right].
     \bf Rev & \bf Date     & \bf Changes \\
     \hline
     1.0     & Oct 28, 2007 & Initial Version for Equalizer 0.4\\
+    1.0.1   & Nov 06, 2007 & Fixed Typo\\
     \hline
   \end{tabularx}}
 \thispagestyle{empty}
@@ -290,7 +291,7 @@ methods are similar in concept to C function callbacks. The
 full list can be found on the website\footnote{see
   \link{http://www.equalizergraphics.com/documents/design/taskMethods.html}}.
 
-\subsection{Execution Modeal and Thread Safety}
+\subsection{Execution Model and Thread Safety}
 
 Using threading correctly in OpenGL-based applications is easy with
 Equalizer. Equalizer creates one rendering thread for each graphics
