Update Programming Guide
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -14,11 +14,7 @@
   \usepackage{hyperref}
 \fi
 
-\title{Equalizer Programming Guide\\
-  {\vspace{-1ex}\footnotesize\sffamily\mdseries
-    \htmladdnormallink{http://www.equalizergraphics.com/documents/Developer/ProgrammingGuide.pdf}
-    {http://www.equalizergraphics.com/documents/ProgrammingGuide.pdf}}
-}
+\title{Equalizer Programming Guide}
 \author{Eyescale Software GmbH}
 
 \date{
@@ -28,7 +24,7 @@
   \end{figure}
   \vspace{1cm}
 %  \textbf{RELEASE CANDIDATE}\\[\medskipamount]
-  Version 1.1.0 for Equalizer 0.4+svn\\[\medskipamount]
+  Version 1.1.1 for Equalizer 0.4+svn\\[\medskipamount]
   \today
 }
 
@@ -116,6 +112,7 @@ right].
     1.0     & Oct 28, 2007 & Initial Version for Equalizer 0.4\\
     1.0.1   & Nov 06, 2007 & Fixed Typo\\
     1.1     & Nov 12, 2007 & Adapted distributed objects\\
+    1.1.1   & Nov 16, 2007 & Minor improvements based on lulu.com print\\
     \hline
   \end{tabularx}}
 \thispagestyle{empty}
